--- a/src/politic.html
+++ b/src/politic.html
@@ -32,7 +32,7 @@
           <div class="header-logo-mobile">
             <a href="/"
               ><img
-                src="./images/header-logo-mobile.png"
+                src="./images/logo.png"
                 width="24"
                 height="24"
                 alt="Logo"
@@ -61,7 +61,7 @@
             <a href="/index.html#home" class="header-link">Home</a>
             <a href="/index.html#about" class="header-link">About</a>
             <a href="/index.html#services" class="header-link">Services</a>
-            <a href="/index.html#faq" class="header-link" style="font-family: Inter;">Faq</a>
+            <a href="/index.html#faq" class="header-link" style="font-family: Inter;">FAQ</a>
             <a href="/index.html#contact" class="header-link">Contact</a>
           </div>
 
@@ -227,13 +227,14 @@
         <div class="footer-list">
           <div class="footer-item">
             <img src="./images/footer-logo.svg" width="479" height="229" alt="" class="footer-logo">
+            <img src="./images/footer-logo-mobile.png" class="footer-logo-mobile" alt="">
           </div>
           <div class="footer-item">
             <div class="footer-menu">
               <a href="/index.html#home" class="header-link footer-link">Home</a>
               <a href="/index.html#about" class="header-link footer-link">About</a>
               <a href="/index.html#services" class="header-link footer-link">Services</a>
-              <a href="/index.html#faq" class="header-link footer-link" style="font-family: Inter;">Faq</a>
+              <a href="/index.html#faq" class="header-link footer-link" style="font-family: Inter;">FAQ</a>
               <a href="/index.html#contact" class="header-link footer-link">Contact</a>
             </div>
             <div class="footer-adress">
@@ -242,19 +243,19 @@
             </div>
             <div class="footer-mail">
               <p class="footer-text">Email:</p>
-              <p class="footer-ad">info@cretomark.com</p>
+              <p class="footer-ad" style="text-transform:none;">info@cretomark.com</p>
             </div>
           </div>
           <div class="footer-item">
             <div class="footer-icon">
-              <a href="#home"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <a href="/index.html#home"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                 <path d="M12 20V4M12 4L6 10M12 4L18 10" stroke="#B1B1B1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg></a>
             </div>
             
           </div>
         </div>
-        <a href="./politic.html" class="copyright">© 2025 Cretomark KFT. All rights reserved</a>
+        <a href="./politic.html" class="copyright">© 2025 Cretomark KFT. All rights reserved. Privacy Policy</a>
       </div>
     </footer>
   
