--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="#home" class="header-link">Home</a>
             <a href="#about" class="header-link">About</a>
             <a href="#services" class="header-link">Services</a>
-            <a href="#faq" class="header-link" style="font-family: Inter;">Faq</a>
+            <a href="#faq" class="header-link" style="font-family: Inter;">FAQ</a>
             <a href="#contact" class="header-link">Contact</a>
           </div>
 
@@ -447,7 +447,7 @@
       <img src="./src/images/Ellipse4.png" class="faq-ellipse" alt="">
       <div class="container">
         <div class="content">
-          <h2 class="title">Faq</h2>
+          <h2 class="title">FAQ</h2>
           <p class="text">We understand that businesses often have specific concerns when it comes 
             to IT services and software solutions. Here are some of the most common questions we receive</p>
         </div>
@@ -594,13 +594,14 @@
         <div class="footer-list">
           <div class="footer-item">
             <img src="./src/images/footer-logo.svg" width="479" height="229" alt="" class="footer-logo">
+            <img src="./src/images/footer-logo-mobile.png" class="footer-logo-mobile" alt="">
           </div>
           <div class="footer-item">
             <div class="footer-menu">
               <a href="#home" class="header-link footer-link">Home</a>
               <a href="#about" class="header-link footer-link">About</a>
               <a href="#services" class="header-link footer-link">Services</a>
-              <a href="#faq" class="header-link footer-link" style="font-family: Inter;">Faq</a>
+              <a href="#faq" class="header-link footer-link" style="font-family: Inter;">FAQ</a>
               <a href="#contact" class="header-link footer-link">Contact</a>
             </div>
             <div class="footer-adress">
@@ -609,7 +610,7 @@
             </div>
             <div class="footer-mail">
               <p class="footer-text">Email:</p>
-              <p class="footer-ad">info@cretomark.com</p>
+              <p class="footer-ad" style="text-transform:none;">info@cretomark.com</p>
             </div>
           </div>
           <div class="footer-item">
@@ -621,7 +622,7 @@
             
           </div>
         </div>
-        <a href="./src/politic.html" class="copyright">© 2025 Cretomark KFT. All rights reserved</a>
+        <a href="./src/politic.html" class="copyright">© 2025 Cretomark KFT. All rights reserved. Privacy Policy</a>
       </div>
     </footer>
     
